Account key check
- Added logic to check if account is valid on H1Emu database (not in use yet)
- Added digital certificate signing
- Will add zip file portable release of launcher
- Code cleanup

--- a/H1EmuLauncher/Language/StringResources.bg-BG.xaml
+++ b/H1EmuLauncher/Language/StringResources.bg-BG.xaml
@@ -171,4 +171,7 @@
     <system:String x:Key="item177">Няма намерени данни за един играч.</system:String>
     <system:String x:Key="item178">Изтриването на вашите данни за един играч може да реши всички проблеми, пред които сте изправени, предупреждаваме ви, че ще загубите целия напредък.\n\nИскате ли да продължите?</system:String>
     <system:String x:Key="item179">Успешно изтрити данни за един играч.</system:String>
+    <system:String x:Key="item180">Ключът на акаунта, който използвате, е забранен.</system:String>
+    <system:String x:Key="item181">Ключът на акаунта, който използвате, не е валиден в базата данни на H1Emu.\n\nМоля, проверете дали сте въвели правилно ключа.</system:String>
+    <system:String x:Key="item182">Възникна грешка при валидирането на ключа на вашия акаунт:</system:String>
 </ResourceDictionary>
