--- a/H1EmuLauncher/Windows/AboutPageWindow.xaml
+++ b/H1EmuLauncher/Windows/AboutPageWindow.xaml
@@ -128,6 +128,7 @@
                                        Foreground="#FFED1C24"
                                        FontWeight="Light">
 
+                                <!-- Lead development-->
                                 <TextBlock TextDecorations="Underline"
                                            TextWrapping="Wrap"
                                            Text="{DynamicResource item126}"/>
@@ -148,6 +149,7 @@
                                        Foreground="#FFED1C24"
                                        FontWeight="Light">
 
+                                <!-- Co-development -->
                                 <TextBlock TextDecorations="Underline"
                                            TextWrapping="Wrap"
                                            Text="{DynamicResource item127}"/>
@@ -168,6 +170,7 @@
                                        Foreground="#FFED1C24"
                                        FontWeight="Light">
 
+                                <!-- Administrators -->
                                 <TextBlock TextDecorations="Underline"
                                            TextWrapping="Wrap"
                                            Text="{DynamicResource item128}"/>
@@ -188,6 +191,7 @@
                                        Foreground="#FFED1C24"
                                        FontWeight="Light">
 
+                                <!-- Contributors -->
                                 <TextBlock TextDecorations="Underline"
                                            TextWrapping="Wrap"
                                            Text="{DynamicResource item129}"/>
@@ -208,6 +212,7 @@
                                        Foreground="#FFED1C24"
                                        FontWeight="Light">
 
+                                <!-- Moderators -->
                                 <TextBlock TextDecorations="Underline"
                                            TextWrapping="Wrap"
                                            Text="{DynamicResource item130}"/>
@@ -228,6 +233,7 @@
                                        Foreground="#FFED1C24"
                                        FontWeight="Light">
 
+                                <!-- Support -->
                                 <TextBlock TextDecorations="Underline"
                                            TextWrapping="Wrap"
                                            Text="{DynamicResource item131}"/>
@@ -248,6 +254,7 @@
                                        Foreground="#FFED1C24"
                                        FontWeight="Light">
 
+                                <!-- Translators -->
                                 <TextBlock TextDecorations="Underline"
                                            TextWrapping="Wrap"
                                            Text="{DynamicResource item136}"/>
@@ -268,6 +275,7 @@
                                        Foreground="#FFED1C24"
                                        FontWeight="Light">
 
+                                <!-- Financial contributors -->
                                 <TextBlock TextDecorations="Underline"
                                            TextWrapping="Wrap"
                                            Text="{DynamicResource item170}"/>
@@ -278,7 +286,7 @@
                                        FontSize="18"
                                        FontWeight="Light">
 
-                                • Booze (Orphanfeast87) • Mahoaga • TimmyFPS • LegalViewbot • remapz • Christer D • A Mad Midget •
+                                • Booze (Orphanfeast87) • Mahoaga • TimmyFPS • LegalViewbot • remapz • Christer D • A Mad Midget • Twin •
 
                             </Paragraph>
 
@@ -287,6 +295,7 @@
                                        FontSize="18"
                                        FontWeight="Light">
                                 
+                                <!-- Special thanks -->
                                 <TextBlock TextDecorations="Underline"
                                            TextWrapping="Wrap"
                                            Text="{DynamicResource item132}"/>
@@ -298,6 +307,7 @@
                                        FontSize="18"
                                        FontWeight="Light">
 
+                                <!-- Launcher made by Eavilaswayce -->
                                 <TextBlock TextWrapping="Wrap"
                                            Text="{DynamicResource item169}"/>
 
